fix z-index

--- a/_sass/components/_modal.scss
+++ b/_sass/components/_modal.scss
@@ -2,7 +2,7 @@
   $this: &;
 
   position: relative;
-  z-index: 30;
+  z-index: 3000;
 
   &__background {
     position: fixed;
